Introduced explicit capability introspection for engines by adding Capability and WithCapabilities to DataAlgebra and having the algebra trait extend it
Implemented capability declarations in the in-memory and Spark implementations, then created a new Flink-backed algebra that delegates to the in-memory logic while exposing read/write/quality-check parity

Added a cross-engine parity spec exercising identical read, write, and quality-check operations on Spark and Flink, alongside build updates and ADR-004 documenting the parity work